--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <include src="./partials/about.html"></include>
     <include src="./partials/store.html"></include>
     <include src="./partials/delivery.html"></include>
-    <include src="./partials/blog.htmt"></include>
+    <include src="./partials/blog.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-contact-us.html"></include>
     <include src="./partials/modal-subscribe.html"></include>
