mobile-menu and header

--- a/src/index.html
+++ b/src/index.html
@@ -28,5 +28,6 @@
     <include src="./partials/mobile-menu.html"></include>
 
     <!-- <include src="./partials/example.html"></include> -->
+    <script type="module" src="./js/mobile-menu.js"></script>
   </body>
 </html>
