fixed section store

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     />
 
     <link rel="stylesheet" href="./sass/index.scss" />
-        <!-- Favicons -->
+    <!-- Favicons -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -48,7 +48,7 @@
       sizes="16x16"
       href="./images/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="./images/favicon/site.webmanifest">
+    <link rel="manifest" href="./images/favicon/site.webmanifest" />
 
     <script type="module" src="./index.js"></script>
   </head>
