--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:url" content="https://polaolka.github.io/tof-project/" />
     <meta property="og:title" content="ANEMONE — minimalistic flower studio" />
     <meta
       property="og:description"
@@ -19,7 +19,7 @@
     />
     <meta
       property="og:image"
-      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+      content="./images/blog/tb/blog2-tb@1x.jpg"
     />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -61,12 +61,19 @@
     <include src="./partials/blog.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-contact-us.html"></include>
-    <include src="./partials/modal-subscribe.html"></include>
+    <!-- <include src="./partials/modal-subscribe.html"></include> -->
     <include src="./partials/modal-thank-you.html"></include>
     <include src="./partials/mobile-menu.html"></include>
     <include src="./partials/up-button.html"></include>
 
     <!-- <include src="./partials/example.html"></include> -->
+    <script
+    defer
+    src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+    integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+    crossorigin="anonymous"
+  ></script>
     <script type="module" src="./js/mobile-menu.js"></script>
+    <script type="module" src="./js/scroll-to-top.js"></script>
   </body>
 </html>
