--- a/src/index.html
+++ b/src/index.html
@@ -75,5 +75,6 @@
   ></script>
     <script type="module" src="./js/mobile-menu.js"></script>
     <script type="module" src="./js/scroll-to-top.js"></script>
+    <!-- <script type="module" src="./js/fixed-header.js"></script> -->
   </body>
 </html>
