add script modal

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,6 @@
     ></script>
     <script type="module" src="./js/mobile-menu.js"></script>
     <script type="module" src="./js/scroll-to-top.js"></script>
-    <!-- <script type="module" src="./js/fixed-header.js"></script> -->
-    <script src="./js/modal.js"></script>
+    <script type="module" src="./js/modal.js"></script>
   </body>
 </html>
