--- a/src/index.html
+++ b/src/index.html
@@ -73,5 +73,12 @@
     <script type="module" src="./js/mobile-menu.js"></script>
     <script type="module" src="./js/scroll-to-top.js"></script>
     <script type="module" src="./js/modal.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    />
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script type="module" src="./js/swiper.js"></script>
   </body>
 </html>
