--- a/src/index.html
+++ b/src/index.html
@@ -80,5 +80,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script type="module" src="./js/swiper.js"></script>
+    <script type="module" src="./js/submit.js"></script>
   </body>
 </html>
