--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
     <include src="./partials/blog.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-contact-us.html"></include>
-    <!-- <include src="./partials/modal-subscribe.html"></include> -->
+    <include src="./partials/modal-subscribe.html"></include>
     <include src="./partials/modal-thank-you.html"></include>
     <include src="./partials/mobile-menu.html"></include>
     <include src="./partials/up-button.html"></include>
@@ -81,5 +81,6 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script type="module" src="./js/swiper.js"></script>
     <script type="module" src="./js/submit.js"></script>
+    <script type="module" src="./js/open-close.js"></script>
   </body>
 </html>
