--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,7 +17,8 @@
       content="We love people and flowers. We give people the beauty and joy creating stylish and modern masterpieces. Every bouquet we create is unique as you are."
     />
     <meta property="og:image" content="./images/store/tb/store60$-tb@1x.jpg" />
-    <meta property="og:locale" content="uk-UA" />
+    <meta property="og:locale" content="en" />
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
