--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,9 @@
       rel="stylesheet"
     />
 
+    <!-- Animation-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!--Styles-->
     <link rel="stylesheet" href="./sass/index.scss" />
     <!-- Favicons -->
     <link
@@ -65,6 +68,10 @@
     <include src="./partials/up-button.html"></include>
 
     <!-- <include src="./partials/example.html"></include> -->
+   
+    <!--Librery-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="./js/aos.js"></script>
     <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
