--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,6 @@
     <meta property="og:image" content="./images/store/tb/store60$-tb@1x.jpg" />
     <meta property="og:locale" content="en" />
 
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -28,7 +27,7 @@
     />
 
     <!-- Animation-->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!--Styles-->
     <link rel="stylesheet" href="./sass/index.scss" />
     <!-- Favicons -->
@@ -65,7 +64,7 @@
     <include src="./partials/modal-subscribe.html"></include>
     <include src="./partials/mobile-menu.html"></include>
     <include src="./partials/up-button.html"></include>
-   
+
     <!--Librery-->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./js/aos.js"></script>
