--- a/src/index.html
+++ b/src/index.html
@@ -53,17 +53,24 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <include src="./partials/header.html"></include>
-    <include src="./partials/hero.html"></include>
-    <include src="./partials/about.html"></include>
-    <include src="./partials/store.html"></include>
-    <include src="./partials/delivery.html"></include>
-    <include src="./partials/blog.html"></include>
-    <include src="./partials/footer.html"></include>
-    <include src="./partials/modal-contact-us.html"></include>
-    <include src="./partials/modal-subscribe.html"></include>
-    <include src="./partials/mobile-menu.html"></include>
-    <include src="./partials/up-button.html"></include>
+    <div class="page">
+      <include src="./partials/header.html"></include>
+      <main>
+        <include src="./partials/hero.html"></include>
+        <include src="./partials/about.html"></include>
+        <include src="./partials/store.html"></include>
+        <include src="./partials/delivery.html"></include>
+        <include src="./partials/blog.html"></include>
+        <include src="./partials/hero.html"></include>
+      </main>
+      <include src="./partials/footer.html"></include>
+  
+      <include src="./partials/modal-contact-us.html"></include>
+      <include src="./partials/modal-subscribe.html"></include>
+      <include src="./partials/mobile-menu.html"></include>
+      <include src="./partials/up-button.html"></include>
+    </div>
+
 
     <!--Librery-->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
